# socketio-esp-idf

./: CMakeLists.txt
include/: socketio.h  socketio_types.h
src/: socketio.c
